Fix to shifting of the file button

--- a/client/main/ribbon.css
+++ b/client/main/ribbon.css
@@ -135,6 +135,7 @@ body.windows.electron .jmv-ribbon-appmenu {
 
 .jmv-ribbon-tab[data-tabname="file"] {
     padding: 7px 20px;
+    min-width: 60px ;
 }
 
 .jmv-ribbon-body {
